--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "dependencies": {
     "flexboxgrid": "^6.3.1",
-    "vue": "^2.2.6"
+    "vue": "^2.2.6",
+    "vue-router": "^2.4.0"
   },
   "browserify": {
     "transform": [
