--- a/package.json
+++ b/package.json
@@ -21,18 +21,21 @@
     "browserify": "^14.3.0",
     "browserify-css": "^0.10.0",
     "budo": "^9.4.7",
+    "envify": "^4.0.0",
     "make": "^0.8.1",
     "vueify": "^9.4.1"
   },
   "dependencies": {
     "flexboxgrid": "^6.3.1",
+    "muse-ui": "^2.0.3",
     "vue": "^2.2.6",
     "vue-router": "^2.4.0"
   },
   "browserify": {
     "transform": [
       "browserify-css",
-      "vueify"
+      "vueify",
+      "envify"
     ]
   }
 }
