--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "flexboxgrid": "^6.3.1",
+    "material-design-icons-iconfont": "^3.0.3",
     "md5": "^2.2.1",
     "muse-ui": "^2.0.3",
     "vue": "^2.2.6",
