--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "flexboxgrid": "^6.3.1",
     "material-design-icons-iconfont": "^3.0.3",
     "md5": "^2.2.1",
+    "moment": "^2.18.1",
     "muse-ui": "^2.0.3",
     "vue": "^2.2.6",
     "vue-router": "^2.4.0"
