--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   },
   "homepage": "https://github.com/sombriks/red-line-finance#readme",
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
     "browserify": "^14.3.0",
     "browserify-css": "^0.10.0",
     "budo": "^10.0.3",
@@ -43,7 +47,15 @@
     "transform": [
       "browserify-css",
       "vueify",
-      "envify"
+      "envify",
+      [
+        "babelify",
+        {
+          "presets": [
+            "es2015"
+          ]
+        }
+      ]
     ]
   }
 }
