--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "have some idea about where did your money went",
   "main": "index.js",
   "scripts": {
-    "dev": "budo src/main.js:build.js -o -l -H 127.0.0.1",
+    "dev": "make dev",
     "clean": "make clean",
     "build": "make build"
   },
