removendo dependência no babel. pra variar deu infecção no node_modules, teve que jogar fora e puxar de novo

--- a/package.json
+++ b/package.json
@@ -42,15 +42,7 @@
     "transform": [
       "browserify-css",
       "vueify",
-      "envify",
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2015"
-          ]
-        }
-      ]
+      "envify"
     ]
   }
 }
