--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "budo": "^10.0.3",
     "envify": "^4.0.0",
     "make": "^0.8.1",
+    "serve": "^14.2.0",
     "vueify": "^9.4.1"
   },
   "dependencies": {
